SERVER-12170 stop calling relinquish() when replicaset nodes decide not to veto an election